# Weather-Data-Aggregation-System

./: .gitignore  README.md
docs/: add_station_tutorial.md  managers.md  mixins.md  models.md  project_setup.md  serializers.md
weather_aggregator/: .env.template  manage.py  pyproject.toml
weather_aggregator/bulgarian_meteo_pro/: apps.py  choices.py  models.py  serializers.py  urls.py  views.py
weather_aggregator/bulgarian_meteo_pro/migrations/: 0001_initial.py  0002_bulgarianmeteoprodata_raw_data.py  0003_alter_bulgarianmeteoprodata_station_status.py  0004_alter_bulgarianmeteoprodata_station_status.py
weather_aggregator/stations/: managers.py  mixins.py  models.py  serializers.py  urls.py  views.py
weather_aggregator/stations/migrations/: 0001_initial.py  0002_station_stations_st_content_5d6485_idx.py  0003_station_stations_st_city_f1c409_idx.py
weather_aggregator/tests/bulgaria_meteo_pro/: test_views.py
weather_aggregator/tests/stations/: test_views.py
weather_aggregator/tests/weather_master_x/: test_views.py
weather_aggregator/weather_aggregator/: asgi.py  serializers_mapping.py  settings.py  urls.py  utils.py  wsgi.py
weather_aggregator/weather_master_x/: apps.py  choices.py  models.py  serializers.py  urls.py  views.py
weather_aggregator/weather_master_x/migrations/: 0001_initial.py  0002_alter_weathermasterx_operational_status.py  0003_alter_weathermasterx_operational_status.py  0004_alter_weathermasterx_humidity_percent_and_more.py  0005_alter_weathermasterx_pressure_hpa.py
